@@ -118,10 +118,9 @@ char *cg_long2str(long value, char *buf, int bufSize);
 char *cg_strncpy(char *str1, char *str2, size_t cnt);
 char *cg_strncat(char *str1, char *str2, size_t cnt);
 
-#if defined(__USE_ISOC99)
-char *cg_longlong2str(long long value, char *buf, int bufSize);
-#elif defined(WIN32)
-char *cg_longlong2str(__int64 value, char *buf, int bufSize);
+#if defined(CG_USE_INT64)
+char *cg_longlong2str(
+					  CgInt64 value, char *buf, int bufSize);
 #endif
 
 #define cg_str2int(value) (value ? atoi(value) : 0)
@@ -129,12 +128,14 @@ char *cg_longlong2str(__int64 value, char *buf, int bufSize);
 #define cg_strhex2long(value) (value ? strtol(value, NULL, 16) : 0)
 #define cg_strhex2ulong(value) (value ? strtoul(value, NULL, 16) : 0)
 
+#if defined(CG_USE_INT64)
 #if defined(__USE_ISOC99)
 #define cg_str2longlong(value) (value ? atoll(value) : 0)
 #define cg_strhex2longlong(value) (value ? strtoll(value, NULL, 16) : 0)
 #define cg_strhex2ulonglong(value) (value ? strtoull(value, NULL, 16) : 0)
-#elif defined(WIN32)
+#elif (defined(WIN32) || defined(WINCE))
 #define cg_str2longlong(value) (value ? _atoi64(value) : 0)
+#endif
 #endif
 
 /****************************************
