@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../../include"
-				PreprocessorDefinitions="WIN32;_DEBUG;CG_USE_OPENSSL"
+				PreprocessorDefinitions="WIN32;_DEBUG;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -107,7 +107,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../../include"
-				PreprocessorDefinitions="WIN32;NDEBUG;CG_USE_OPENSSL"
+				PreprocessorDefinitions="WIN32;NDEBUG;"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -659,7 +659,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\include\Makefile.am"
+				RelativePath="..\..\..\include\cybergarage\typedef.h"
 				>
 			</File>
 		</Filter>
