@@ -1,3 +1,11 @@
+2007-03-18  Satoshi Konno <skonno@cybergarage.org>
+	* Added CgInt64 to <typedef.h>
+	* Changed the following functions to use CgInt64.
+	  cg_longlong2str()
+	  cg_http_packet_setheaderlonglong()
+	  cg_http_packet_getheaderlonglong()
+	* Disable CG_USE_OPENSSL for Visual Studio projects as default.
+
 2007-03-11  Satoshi Konno <skonno@cybergarage.org>
 	* Added support of OpenSSL to socket functions in csocket.c.
 	* Added CG_USE_OPENSSL define and --enable-openssl option to disable the SSL functions as default.
